2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/errors.py:
	* gaupol/gtk/index.py:
	Minor changes.

2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (asserted_return):
	New decorator to replace silent(AssertionError).
	Fix all references.

2007-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/open.py:
	* gaupol/determiner.py:
	* gaupol/liner.py:
	Minor changes to contracts.

	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/conf/config.py:
	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/wrappers.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/util.py:
	Add contracts and clean up code.

	* gaupol/gtk/unittest/case.py:
	* gaupol/unittest/case.py:
	Import Project, Page and Application locally.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/i18n.py:
	* gaupol/gtk/main.py:
	Remove i18n and move stuff to main.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/unittest/case.py:
	* gaupol/gtk/unittest/__init__.py:
	Minor changes.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/reversion:
	* gaupol/reversion/test:
	Set svn:ignore properties on directories.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/actions/action.py:
	Remove leading underscore from filename.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents:
	* gaupol/base/mutables.py:
	* gaupol/files/subfile.py:
	* gaupol/gtk/actions:
	* gaupol/gtk/agents:
	* gaupol/tags/taglib.py:
	Remove leading underscore from filename.

2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/__init__.py:
	* gaupol/_agents/clipboard.py:
	* gaupol/_agents/edit.py:
	* gaupol/_agents/format.py:
	* gaupol/_agents/index.py:
	* gaupol/_agents/open.py:
	* gaupol/_agents/position.py:
	* gaupol/_agents/preview.py:
	* gaupol/_agents/register.py:
	* gaupol/_agents/save.py:
	* gaupol/_agents/search.py:
	* gaupol/_agents/set.py:
	* gaupol/_agents/support.py:
	* gaupol/_agents/text.py: